...
    <string name="language_swedish_sv" translatable="false">Svenska</string>
    <string name="language_tamil_ta" translatable="false">தமிழ்</string>
    <string name="language_turkish_tr" translatable="false">Türkçe</string>
    <string name="language_ukrainian_uk" translatable="false">Українська</string>

    <!-- Exception Messages   -->
    <string name="generic_error">ERROR: %1$s</string>
    <string name="delete_default_aisle_exception">ERROR: Default Aisle can\'t be removed</string>
    <string name="duplicate_product_name_exception">ERROR: Product Name must be unique</string>
    <string name="duplicate_location_name_exception">ERROR: Location Name must be unique</string>
    <string name="duplicate_aisle_name_exception">ERROR: Aisle Name must be unique per list</string>
    <string name="invalid_location_exception">ERROR: Invalid Location Id provided</string>
    <string name="invalid_product_exception">ERROR: Invalid Product Id provided</string>
...
    <string name="add_another">Add Another</string>
    <string name="aisle_name">Aisle Name</string>
    <string name="id_label" translatable="false">id</string>
    <string name="done">Done</string>
    <string name="search_product_hint">Search Products…</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_confirmation">Delete %1$s?</string>
    <string name="edit_aisle">Edit Aisle</string>
    <string name="edit_location">Edit Shop</string>
    <string name="main_fab">Main FAB</string>
    <string name="add_shop_fab">Add Shop FAB</string>
    <string name="add_aisle_fab">Add Aisle FAB</string>
    <string name="add_product_fab">Add Product FAB</string>
...
    <string name="mnu_sort_list_by_name">Sort by name</string>
    <string name="sort_confirm_title">Confirm Sort</string>
    <string name="sort_confirm_message">Sorting by name will rearrange the list alphabetically and overwrite your current sort order. Do you want to proceed?</string>
    <string name="new_entity_name">New Entity Name</string>
    <string name="new_location_name">New Location Name</string>
    <string name="new_product_name">New Product Name</string>
    <string name="copy_entity_title">Copy %1$s</string>
    <string name="entity_copied">%1$s copied</string>
    <string name="entity_name_required">Name cannot be empty</string>
    <string name="decrement">Decrement</string>
    <string name="increment">Increment</string>
    <string name="qty">Qty</string>
    <string name="expand_collapse_aisles">Expand/collapse aisles</string>
    <string name="extra_options">Extra options</string>
    <string name="tab_notes">Notes</string>
    <string name="product_tab_aisles">Aisles</string>
    <string name="product_tab_barcodes">Barcodes</string>
    <string name="product_tab_inventory">Inventory</string>
    <string name="notes_hint">Enter notes here…</string>
    <string name="show_note">Show note</string>
    <string name="note_dialog_title">Note for %1$s</string>
    <string name="loading">Loading…</string>
    <string name="dismiss">Dismiss</string>
    <string name="view_changes">View Changes</string>
    <string name="updated_notification">Aisleron was updated from %1$s to %2$s. </string>
    <string name="aisle_picker">Aisle Picker</string>
    <string name="qty_increments">Qty Increments</string>
...
