...
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_shopping_list">

    <fragment
        android:id="@+id/nav_in_stock"
        android:name="com.aisleron.ui.shoppinglist.ShoppingListFragment"
        tools:layout="@layout/fragment_shopping_list">
        <argument
...
                android:name="com.aisleron.domain.FilterType"
                android:defaultValue="NEEDED" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/nav_add_shop"
        android:name="com.aisleron.ui.shop.ShopFragment"
        android:label="@string/add_location"
        tools:layout="@layout/fragment_shop">
        <argument
            android:name="addEditLocationBundle"
            app:argType="com.aisleron.ui.bundles.AddEditLocationBundle" />
...
