<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="12dp"
    android:clickable="true"
    android:orientation="horizontal"
    android:focusable="true">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:srcCompat="@drawable/baseline_store_24" />

    <TextView
        android:id="@+id/txt_shop_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/text_margin"
        android:gravity="center_vertical"
        android:singleLine="true"
        android:text="@string/shop_name"
        android:textAppearance="?attr/textAppearanceListItem" />
</LinearLayout>